--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.ucai.fulishop">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".FuLiShopApplication"
         android:allowBackup="true"
         android:icon="@mipmap/launcher"
         android:label="福利社"
