--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.GoodsDetailsActivity" />
-        <activity android:name=".activity.BoutiqueCategroyActivity"></activity>
+        <activity android:name=".activity.BoutiqueCategroyActivity" />
+        <activity android:name=".activity.CategoryChildActivity"></activity>
     </application>
 
 </manifest>
