--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         </activity>
         <activity android:name=".activity.GoodsDetailsActivity" />
         <activity android:name=".activity.BoutiqueCategroyActivity" />
-        <activity android:name=".activity.CategoryChildActivity"></activity>
+        <activity android:name=".activity.CategoryChildActivity" />
+        <activity android:name=".activity.RegisterActivity" />
+        <activity android:name=".activity.LoginActivity"></activity>
     </application>
 
 </manifest>
