添加个人资料界面，在个人中心界面按设置键跳转到个人资料

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="cn.ucai.fulishop">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".FuLiShopApplication"
@@ -25,7 +25,9 @@
         <activity android:name=".activity.BoutiqueCategroyActivity" />
         <activity android:name=".activity.CategoryChildActivity" />
         <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.PersonActivity" />
+        <activity android:name=".activity.UpdateNickActivity"></activity>
     </application>
 
 </manifest>
